<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.todo.thomas.scrolltask.MainActivity" >
    <item
        android:id="@+id/action_add"
        android:orderInCategory="300"
        android:icon="@drawable/add"
        android:title="@string/action_add"
        android:showAsAction="ifRoom|withText"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="ifRoom|withText"/>
    
    <item
        android:id="@+id/action_removeall"
        android:orderInCategory="50"
        android:title="@string/action_removeall"
        android:showAsAction="ifRoom|withText"/>
    


</menu>
