<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.todo.thomas.scrolltask.detail.DetailActivity" >
    
        <item
        android:id="@+id/action_detail_add"
        android:orderInCategory="100"
        android:icon="@drawable/add"
        android:title="@string/action_add"
        android:showAsAction="ifRoom"/>

        <item
        android:id="@+id/action_detail_delete"
        android:orderInCategory="200"
        android:icon="@drawable/delete"
        android:title="@string/action_delete"
        android:showAsAction="ifRoom"/>
        
        <item
        android:id="@+id/action_detail_modify"
        android:orderInCategory="50"
        android:icon="@drawable/edit"
        android:title="@string/action_modify"
        android:showAsAction="ifRoom"/>
        
</menu>
